--- a/css/style.css
+++ b/css/style.css
@@ -188,9 +188,42 @@ button:hover {
 }
 /*--------------END-CONTENT------------*/
 
+/*----OPTION----*/
+#optionContainer {
+    font-size: 2.4rem;
+}
+#optionContainer label {
+    margin: 15px;
+    margin-left: 0px;
+    margin-right: 5px;
+}
+#optionContainer input {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 13px;
+    height: 13px;
+    background-color: white;
+    border-radius: 3px;
+    cursor: pointer;
+}
+#optionContainer input:after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    font-size: 11px;
+    content: "\f00c";
+    color: rgb(0, 132, 255);
+    display: none;
+}
+#optionContainer input:hover {
+    background-color: rgb(215, 218, 221);
+}
+#optionContainer input:checked:after {
+    display: block;
+}
+
 /*----FOOTER----*/
 #footerContainer {
-    margin: 20px;
+    margin-bottom: 20px;
     height: 5%;
 }
 #footerContainer a {
@@ -263,6 +296,7 @@ button:hover {
 
     #headerContainer {
         z-index: 5;
+        border-radius: 0;
     }
 
     #insertContainer {
@@ -300,6 +334,17 @@ button:hover {
         width: 100%;
         height: 100vh;
     }
+
+    #divResult {
+        width: 250px;
+        padding: 5px;
+    }
+    #divResult h1 {
+        font-size: 1.7rem;
+    }
+    #divResult span {
+        font-size: 1.7rem;
+    }
 }
 @media (max-width: 540px) {
     * {
@@ -308,22 +353,15 @@ button:hover {
 }
 @media (max-width: 460px) {
     #insertContainer #errorName {
-        font-size: 1rem;
-    }
-    #divResult {
-        padding: 10px;
-    }
-    #divResult h1 {
-        font-size: 1.9rem;
-    }
-    #divResult span {
-        font-size: 1.9rem;
+        font-size: 1.3rem;
     }
 }
-
 @media (max-width: 340px) {
     * {
         font-size: 52.5%;
+    }
+    #insertContainer #errorName {
+        font-size: 1.15rem;
     }
 }
 @media (max-width: 310px) {
